--- a/css/style.css
+++ b/css/style.css
@@ -92,6 +92,23 @@ div.priconneyomi {
 }
 /* CSS FOR WORD SELECTION BUTTON END */
 
+/* IMAGE HIGHLIGHTS START */
+img.futsuyomi {
+    outline: 5px solid rgb(115, 175, 85);
+    outline-offset: -6px;
+}
+
+img.urayomi {
+    outline: 5px solid rgb(46, 169, 255);
+    outline-offset: -6px;
+}
+
+img.priconneyomi {
+    outline: 5px solid rgb(255, 127, 170);
+    outline-offset: -6px;
+}
+/* IMAGE HIGHLIGHTS END */
+
 /* CSS FOR WORD LIST START */
 img.word-list-image {
     max-height: 48px;
@@ -133,6 +150,11 @@ hr {
     -webkit-filter: opacity(50%);
     filter: opacity(50%);
 }
+.grayscale {
+    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+    filter: grayscale(100%);
+}
+
 
 .centerText {
     text-align: center;
