--- a/css/style.css
+++ b/css/style.css
@@ -147,12 +147,14 @@ div.latest-selection-character {
     font-size: 35px;
     position: relative;
     bottom: 139px;
+    right: 1px;
 }
 #latest-selection-text {
     font-weight: bolder;
     font-size: 24px;
     position: relative;
-    bottom: 150px;
+    padding-top: 20px;
+    bottom: 170px;
 }
 #latest-selection {
     padding-top: 20px;
@@ -161,7 +163,7 @@ div.latest-selection-character {
 }
 #undo-button {
     position: relative;
-    bottom: 160px;
+    bottom: 195px;
 }
 /* CSS FOR LATEST SELECTION END */
 
